# upp

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/lib/: Align.h  CMakeLists.txt  Compression.h  CompressionBrotli.cpp  CompressionGzip.cpp  CompressionLZ4.cpp  CompressionOodle.cpp  CompressionZlib.cpp  Crc32.h  IKeyChain.h
src/lib/File/: DefaultFileProvider.h  IEncrypable.h  IFileProvider.h
src/lib/MappingsProvider/: ITypeMappingsProvider.h
src/lib/Objects/Core/: EPixelFormat.cpp  EPixelFormat.h
src/lib/Objects/Core/FileCache/: FFileCachePreloadEntry.cpp  FFileCachePreloadEntry.h
src/lib/Objects/Core/IO/: EIoChunkType.h  EIoContainerFlags.h  EIoStoreTocEntryMetaFlags.h  EIoStoreTocVersion.h  FIoArchive.cpp  FIoArchive.h  FIoChunkHash.cpp  FIoChunkHash.h  FIoChunkId.cpp  FIoChunkId.h  FIoContainerId.cpp  FIoContainerId.h  FIoDirectoryIndexEntry.cpp  FIoDirectoryIndexEntry.h  FIoDirectoryIndexResource.cpp  FIoDirectoryIndexResource.h  FIoFileIndexEntry.cpp  FIoFileIndexEntry.h  FIoOffsetAndLength.cpp  FIoOffsetAndLength.h  FIoStoreTocCompressedBlockEntry.cpp  FIoStoreTocCompressedBlockEntry.h  FIoStoreTocEntryMeta.cpp  FIoStoreTocEntryMeta.h  FIoStoreTocHeader.cpp  FIoStoreTocHeader.h  FIoStoreTocResource.cpp  FIoStoreTocResource.h
src/lib/Objects/Core/Internationalization/: EDateTimeStyle.h  EFormatArgumentType.h  ERoundingMode.h  ETextFlag.h  ETextHistoryType.h  ETransformType.h  FFormatArgumentValue.cpp  FFormatArgumentValue.h  FFormatNamedArguments.h  FNumberFormattingOptions.cpp  FNumberFormattingOptions.h  FText.cpp  FText.h  FTextHistory.cpp  FTextHistory.h  FTextHistoryData.cpp  FTextHistoryData.h
src/lib/Objects/Core/Math/: ERangeBoundTypes.h  FBox.cpp  FBox.h  FBox2D.cpp  FBox2D.h  FBoxSphereBounds.cpp  FBoxSphereBounds.h  FColor.cpp  FColor.h  FFloat16.h  FIntPoint.cpp  FIntPoint.h  FIntVector.cpp  FIntVector.h  FLinearColor.cpp  FLinearColor.h  FPlane.cpp  FPlane.h  FQuat.cpp  FQuat.h  FRotator.cpp  FRotator.h  FTransform.cpp  FTransform.h  FVector.cpp  FVector.h  FVector2D.cpp  FVector2D.h  FVector2DHalf.cpp  FVector2DHalf.h  FVector4.cpp  FVector4.h  TRange.h  TRangeBound.h
src/lib/Objects/Core/Misc/: FAESKey.h  FAESSchedule.cpp  FAESSchedule.h  FDateTime.h  FFrameNumber.h  FFrameRate.h  FGuid.h  FSHAHash.cpp  FSHAHash.h
src/lib/Objects/Core/Serialization/: ESeekDir.h  FArchive.cpp  FArchive.h  FBufferArchive.cpp  FBufferArchive.h  FByteArchive.cpp  FByteArchive.h  FFileArchive.cpp  FFileArchive.h
src/lib/Objects/Engine/: ESkinVertexColorChannel.h  EStrippedData.h  FAdditionalStaticMeshIndexBuffers.h  FBspNode.cpp  FBspNode.h  FBspSurf.h  FClothingSectionData.cpp  FClothingSectionData.h  FColorVertexBuffer.cpp  FColorVertexBuffer.h  FDistanceFieldVolumeData.cpp  FDistanceFieldVolumeData.h  FExpressionInput.cpp  FExpressionInput.h  FMaterialInput.h  FMeshBoneInfo.cpp  FMeshBoneInfo.h  FMeshToMeshVertData.cpp  FMeshToMeshVertData.h  FMeshUVChannelInfo.cpp  FMeshUVChannelInfo.h  FModelVertex.cpp  FModelVertex.h  FModelVertexBuffer.h  FPositionVertexBuffer.cpp  FPositionVertexBuffer.h  FRawStaticIndexBuffer.cpp  FRawStaticIndexBuffer.h  FReferenceSkeleton.cpp  FReferenceSkeleton.h  FSpeedTreeWind.cpp  FSpeedTreeWind.h  FStaticMeshBuffersSize.cpp  FStaticMeshBuffersSize.h  FStaticMeshLODResources.cpp  FStaticMeshLODResources.h  FStaticMeshOccluderData.cpp  FStaticMeshOccluderData.h  FStaticMeshRenderData.cpp  FStaticMeshRenderData.h  (+12 more)
src/lib/Objects/GameplayTags/: FGameplayTagContainer.h
src/lib/Objects/MovieScene/: FMovieSceneFrameRange.cpp  FMovieSceneFrameRange.h  FMovieSceneSequenceID.cpp  FMovieSceneSequenceID.h
src/lib/Objects/PakFile/: EPakEntryFlags.h  EPakVersion.h  FPakArchive.cpp  FPakArchive.h  FPakArchiveReader.h  FPakCompressedBlock.cpp  FPakCompressedBlock.h  FPakEntry.cpp  FPakEntry.h  FPakEntryLocation.h  FPakInfo.cpp  FPakInfo.h
src/lib/Objects/RHI/: EBlendFactor.h  EBlendOperation.h  EColorWriteMask.h  ECompareFunction.h  EPSODescriptorType.h  EPSOOrder.h  EPipelineCacheFileFormatVersions.h  EPrimitiveType.h  ERasterizerCullMode.h  ERasterizerFillMode.h  ERenderTargetLoadAction.h  ERenderTargetStoreAction.h  EShaderFrequency.h  EShaderPlatform.h  EStencilOp.h  ETextureCreateFlags.h  EVertexElementType.h  FBlendStateInitializerRHI.cpp  FBlendStateInitializerRHI.h  FDepthStencilStateInitializerRHI.cpp  FDepthStencilStateInitializerRHI.h  FPSODescriptor.cpp  FPSODescriptor.h  FPipelineCacheFileFormatHeader.cpp  FPipelineCacheFileFormatHeader.h  FPipelineCacheFileFormatPSO.cpp  FPipelineCacheFileFormatPSO.h  FPipelineCacheFileFormatPSOMetaData.cpp  FPipelineCacheFileFormatPSOMetaData.h  FPipelineCacheFileFormatTOC.cpp  FPipelineCacheFileFormatTOC.h  FPipelineFileCache.cpp  FPipelineFileCache.h  FPipelineFileCacheRasterizerState.cpp  FPipelineFileCacheRasterizerState.h  FPipelineStateStats.cpp  FPipelineStateStats.h  FRenderTarget.cpp  FRenderTarget.h  FVertexDeclarationElementList.h  (+2 more)
src/lib/Objects/RenderCore/: FPackedNormal.cpp  FPackedNormal.h  FPackedRGBA16N.cpp  FPackedRGBA16N.h  FSerializedShaderArchive.cpp  FSerializedShaderArchive.h  FShaderCodeArchive.cpp  FShaderCodeArchive.h  FShaderCodeEntry.cpp  FShaderCodeEntry.h  FShaderMapEntry.cpp  FShaderMapEntry.h
src/lib/Pak/: EPakVersion.h  FPakInfo.h  FileReader.cpp  FileReader.h
src/lib/Providers/: BaseProvider.cpp  BaseProvider.h  EPropertyType.h  Enum.h  Name.h  Property.h  PropertyData.h  Schema.h  UsmapProvider.cpp  UsmapProvider.h
src/lib/Providers/Usmap/: ECompressionMethod.h  EVersion.h  Header.cpp  Header.h
src/lib/Readers/: BaseReader.cpp  BaseReader.h  Error.h  FArchive.cpp  FArchive.h  FByteArchive.cpp  FByteArchive.h  FFileArchive.cpp  FFileArchive.h  IoReader.cpp  IoReader.h  IoReaderExporter.cpp  NameMappedArchive.h  PakReader.cpp  PakReader.h  SeekDirection.h  ThreadSafeArchive.h
src/lib/Versions/: EGame.h  UE4Version.h
src/lib/Vfs/: BaseVfs.h  CStringKey.h  Directory.h  DirectoryIterator.h  File.h  GlobalData.cpp  GlobalData.h  PrefixedKey.h  SmallMap.h  Vfs.cpp  Vfs.h
src/test/: CMakeLists.txt  main.cpp
(+267 files in other folders)
